--- a/rss/index.html
+++ b/rss/index.html
@@ -1,5 +1,35 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/"><channel><title>RapidMoviez</title><link>http://rmz.cr/</link><description>Download Movies/TV Shows, ...</description><language>en-US</language><copyright>Copyright 2024</copyright><lastBuildDate>Fri, 11 Jul 2025 12:00:20 GMT</lastBuildDate><generator>rfeed v1.0.0</generator><docs>https://github.com/svpino/rfeed/blob/master/README.md</docs><item><title>Kiff: The Haunting of Miss McGravy's House 2024 720p WEBRip-YTS (207MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/n562unps95ff
+<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/"><channel><title>RapidMoviez</title><link>http://rmz.cr/</link><description>Download Movies/TV Shows, ...</description><language>en-US</language><copyright>Copyright 2024</copyright><lastBuildDate>Fri, 11 Jul 2025 12:30:22 GMT</lastBuildDate><generator>rfeed v1.0.0</generator><docs>https://github.com/svpino/rfeed/blob/master/README.md</docs><item><title>Maximum Impact 2008 720p BluRay-YTS (687MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/c97tl6166gds
+https://clicknupload.one/vrzddky49gl5
+https://clicknupload.one/ow9u73vmzpts
+https://clicknupload.one/zmw90erbxv8j
+https://clicknupload.one/a23p6cty9m85&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;Maximum Impact 2008 720p BluRay-YTS &lt;br&gt;[RR/NF/CU]Size: 687MB mp4 H264 (HIGH) (AVC1) / AAC (LC) (MP4A) HD 1280x720 &lt;br&gt;&lt;/pre&gt;&lt;img alt="Maximum Impact" itemprop="image" longdesc="/i/1288586" src="http://rmz.cr/data/images/movies/2025-07/maximum-impact.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Language: English&lt;br&gt;Country: United Kingdom&lt;br&gt;MPAA Rate: Not Rated&lt;br&gt;Directed By: Ara Paiaya&lt;br&gt;Genre: Action | Adventure&lt;br&gt;Maximum Impact (2009)&lt;br&gt;Storyline:
+                            Agent X races to rescue a captured government cryptologist from the hands of a rogue agent. A harsh man who will show no mercy to anyone. Agent X faces his most deadly adversaries. Fleeing from assassins and fighting his way to th...&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt1288586" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt1288586/" target="_blank"&gt;http://www.imdb.com/title/tt1288586/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
+File Container: MP4 &lt;br&gt; Video/Audio Codec: H264 (HIGH) (AVC1) AAC (LC) (MP4A) &lt;br&gt; Video Resolution: 1280x720&lt;/pre&gt;</description><pubDate>Fri, 11 Jul 2025 17:17:18 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/maximum-impact-2008-720p-bluray-yts</guid></item><item><title>Kiff: The Haunting of Miss McGravy's House 2024 1080p WEBRip 5.1-YTS (424MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/d0h6l5vbgtbn
+https://clicknupload.one/36r2dxpxrwzr
+https://clicknupload.one/ohlnybgcdozt
+https://clicknupload.one/02jr8exnqze8
+https://clicknupload.one/c1kbpov0tb39
+https://clicknupload.one/32t21bmlu40b
+https://clicknupload.one/y4z6vb53o9lu
+https://clicknupload.one/ykm1rj6s349y
+https://clicknupload.one/9g4tlv22hgcf
+https://clicknupload.one/gt7b3t7so5ka
+https://clicknupload.one/qqp4ctp5kto5
+https://clicknupload.one/sjx24s1eimja
+https://clicknupload.one/1jc1wwhm8her
+https://clicknupload.one/emjqemh4lwps
+https://clicknupload.one/7uumv8o7t2zf
+https://clicknupload.one/tzuxb6thugnd
+https://clicknupload.one/osw8cadxl32d
+https://clicknupload.one/rtdpk833s10n
+https://clicknupload.one/m095t7t1paam&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;Kiff: The Haunting of Miss McGravy's House 2024 1080p WEBRip 5.1-YTS &lt;br&gt;[RR/NF/CU]Size: 424MB mp4 H264 (HIGH) (AVC1) / AAC (LC) (MP4A) HD 1920x1080 &lt;br&gt;&lt;/pre&gt;&lt;img alt="Kiff: The Haunting of Miss McGravy's House" itemprop="image" longdesc="/i/35836449" src="http://rmz.cr/data/images/movies/2025-07/kiff--the-haunting-of-miss-mcgravy-s-house.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt; movie plot: either none available or something fucked up&lt;br&gt;IMDB info&lt;/pre&gt; &lt;pre&gt;
+File Container: MP4 &lt;br&gt; Video/Audio Codec: H264 (HIGH) (AVC1) AAC (LC) (MP4A) &lt;br&gt; Video Resolution: 1920x1080&lt;/pre&gt;</description><pubDate>Fri, 11 Jul 2025 17:12:52 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/kiff-the-haunting-of-miss-mcgravys-house-2024-1080p-webrip-51-yts</guid></item><item><title>Knee High 2025 720p WEBRip-YTS (1GB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/ndv05c3m56zt
+https://clicknupload.one/fw9q40k8dfzk
+https://clicknupload.one/iwyfhpkgrk9q
+https://clicknupload.one/m9ufhyhl7vbs&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;Knee High 2025 720p WEBRip-YTS &lt;br&gt;[RR/NF/CU]Size: 1GB mp4 H264 (HIGH) (AVC1) / AAC (LC) (MP4A) HD 1280x544 &lt;br&gt;&lt;/pre&gt;&lt;img alt="Knee High" itemprop="image" longdesc="/i/21879982" src="http://rmz.cr/data/images/movies/2025-07/knee-high.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Language: English&lt;br&gt;Directed By: Marissa Vonn&lt;br&gt;Genre: Drama&lt;br&gt;Knee High (2025)&lt;br&gt;Storyline:
+                            Following a sudden loss, Cal Melbourne, a young father forced to grow up fast on Iowa's farmlands, must choose between salvaging his family's legacy or pursuing an unknown future for himself and his son.&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt21879982" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt21879982/" target="_blank"&gt;http://www.imdb.com/title/tt21879982/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
+File Container: MP4 &lt;br&gt; Video/Audio Codec: H264 (HIGH) (AVC1) AAC (LC) (MP4A) &lt;br&gt; Video Resolution: 1280x544&lt;/pre&gt;</description><pubDate>Fri, 11 Jul 2025 17:10:41 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/knee-high-2025-720p-webrip-yts</guid></item><item><title>Kiff: The Haunting of Miss McGravy's House 2024 720p WEBRip-YTS (207MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/n562unps95ff
 https://clicknupload.one/kul4tnq6yzf4
 https://clicknupload.one/ww5kva8w59yo
 https://clicknupload.one/6l15viwmdgiu
