--- a/rss/index.html
+++ b/rss/index.html
@@ -1,5 +1,50 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/"><channel><title>RapidMoviez</title><link>http://rmz.cr/</link><description>Download Movies/TV Shows, ...</description><language>en-US</language><copyright>Copyright 2024</copyright><lastBuildDate>Sat, 27 Sep 2025 23:20:03 GMT</lastBuildDate><generator>rfeed v1.0.0</generator><docs>https://github.com/svpino/rfeed/blob/master/README.md</docs><item><title>Sleep Tight 2011 1080p BluRay DD5.1 HEVC x265-RMTeam (1.8GB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/49i6ak7l3bnu&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;Sleep Tight 2011 1080p BluRay DD5.1 HEVC x265-RMTeam &lt;br&gt;[RR/NF/CU]Size: 1.8GB RMTeam x265 mkv HEVC (MAIN) / AAC (LC) HD 1920x1080 +Subtitle &lt;br&gt;&lt;/pre&gt;&lt;img alt="Sleep Tight" itemprop="image" longdesc="/i/1437358" src="https://rmz.cr/data/images/movies/2025-09/sleep-tight.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Language: Spanish&lt;br&gt;Country: Spain, Mexico&lt;br&gt;MPAA Rate: Not Rated&lt;br&gt;Cast: Luis Tosar, Marta Etura, Alberto San Juan&lt;br&gt;Directed By: Jaume Balagueró&lt;br&gt;Genre: Crime | Drama | Thriller&lt;br&gt;Sleep Tight (2011)&lt;br&gt;Storyline:
+<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/"><channel><title>RapidMoviez</title><link>http://rmz.cr/</link><description>Download Movies/TV Shows, ...</description><language>en-US</language><copyright>Copyright 2024</copyright><lastBuildDate>Sat, 27 Sep 2025 23:40:02 GMT</lastBuildDate><generator>rfeed v1.0.0</generator><docs>https://github.com/svpino/rfeed/blob/master/README.md</docs><item><title>F1: The Movie 2025 720p BluRay-YTS (1.4GB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/jn1p7a5lpcx5
+https://clicknupload.one/339k8529gjw0
+https://clicknupload.one/0oiqlxmgnb5l
+https://clicknupload.one/qw7em4b852ad
+https://clicknupload.one/za3nguzrbgg8
+https://clicknupload.one/5ipmb85y17gc
+https://clicknupload.one/etxo6ocvllm3
+https://clicknupload.one/zjrnk8g80oux
+https://clicknupload.one/5uywbxk3h6ct
+https://clicknupload.one/2djc06msskx6
+https://clicknupload.one/kxq4wyejtgpb
+https://clicknupload.one/fm1fvrigkze9
+https://clicknupload.one/opb34tle2nmx
+https://clicknupload.one/9jiohclj549f
+https://clicknupload.one/61ah1kdtie83
+https://clicknupload.one/gbgke7tdafuo
+https://clicknupload.one/go3f43p33uds
+https://clicknupload.one/j8kshq53qc1e
+https://clicknupload.one/woypqqvxrh76
+https://clicknupload.one/uu01d9tdhze0
+https://clicknupload.one/2vi539gcix9d
+https://clicknupload.one/rsbacwx8wbi4
+https://clicknupload.one/nyqm1iiqqw8u
+https://clicknupload.one/h72fhvriazs9
+https://clicknupload.one/4jlf95mlieyx
+https://clicknupload.one/5t8no0is5q6y
+https://clicknupload.one/g9allzz692mh
+https://clicknupload.one/vlpcgw2ikdrm
+https://clicknupload.one/cvntnldltfu5
+https://clicknupload.one/zdno42ci96u2
+https://clicknupload.one/acurf5r17f6e
+https://clicknupload.one/8eoov2gdoacc
+https://clicknupload.one/j63f96xb5j39
+https://clicknupload.one/heom7x9v8kt2
+https://clicknupload.one/2tr1l54bavge
+https://clicknupload.one/xtxm8p6kwk59
+https://clicknupload.one/koeagym3fu6f
+https://clicknupload.one/hnm5jyj6nxwu
+https://clicknupload.one/eymyzckh6fp2
+https://clicknupload.one/bsyuw6u4qbu6
+https://clicknupload.one/nnt0tllv3gfo
+https://clicknupload.one/gh3tr3zqtepu
+https://clicknupload.one/3xll2xmb7luq
+https://clicknupload.one/4l4d8ok9e1kk&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;F1: The Movie 2025 720p BluRay-YTS &lt;br&gt;[RR/NF/CU]Size: 1.4GB mp4 H264 (HIGH) (AVC1) / AAC (LC) (MP4A) HD 1280x536 &lt;br&gt;&lt;/pre&gt;&lt;img alt="F1: The Movie" itemprop="image" longdesc="/i/16311594" src="https://rmz.cr/data/images/movies/2025-07/f1--the-movie.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Language: English, Spanish, German, Italian&lt;br&gt;Country: United States&lt;br&gt;MPAA Rate: PG-13&lt;br&gt;Cast: Brad Pitt, Damson Idris, Javier Bardem&lt;br&gt;Directed By: Joseph Kosinski&lt;br&gt;Genre: Action | Drama | Sport&lt;br&gt;F1: The Movie (2025)&lt;br&gt;Storyline:
+                            A Formula One driver comes out of retirement to mentor and team up with a younger driver.&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt16311594" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt16311594/" target="_blank"&gt;http://www.imdb.com/title/tt16311594/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
+File Container: MP4 &lt;br&gt; Video/Audio Codec: H264 (HIGH) (AVC1) AAC (LC) (MP4A) &lt;br&gt; Video Resolution: 1280x536&lt;/pre&gt;</description><pubDate>Sun, 28 Sep 2025 03:22:28 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/f1-the-movie-2025-720p-bluray-yts</guid></item><item><title>Sleep Tight 2011 1080p BluRay DD5.1 HEVC x265-RMTeam (1.8GB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/49i6ak7l3bnu&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;Sleep Tight 2011 1080p BluRay DD5.1 HEVC x265-RMTeam &lt;br&gt;[RR/NF/CU]Size: 1.8GB RMTeam x265 mkv HEVC (MAIN) / AAC (LC) HD 1920x1080 +Subtitle &lt;br&gt;&lt;/pre&gt;&lt;img alt="Sleep Tight" itemprop="image" longdesc="/i/1437358" src="https://rmz.cr/data/images/movies/2025-09/sleep-tight.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Language: Spanish&lt;br&gt;Country: Spain, Mexico&lt;br&gt;MPAA Rate: Not Rated&lt;br&gt;Cast: Luis Tosar, Marta Etura, Alberto San Juan&lt;br&gt;Directed By: Jaume Balagueró&lt;br&gt;Genre: Crime | Drama | Thriller&lt;br&gt;Sleep Tight (2011)&lt;br&gt;Storyline:
                             César is the superintendent of an apartment building and keeps very close tabs on the tenants. He secretly enjoys inflicting pain on others, and the occupant of apartment 5B will be his new target.&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt1437358" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt1437358/" target="_blank"&gt;http://www.imdb.com/title/tt1437358/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
 File Container: MKV &lt;br&gt; Video/Audio Codec: HEVC (MAIN) AAC (LC) &lt;br&gt; Video Resolution: 1920x1080&lt;/pre&gt;</description><pubDate>Sun, 28 Sep 2025 03:05:49 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/sleep-tight-2011-1080p-bluray-dd51-hevc-x265-rmteam-1</guid></item><item><title>The Man in My Basement 2025 1080p WEBRip x265 10bit 5.1-YTS (1.9GB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/d0l9w3ak7ca5
 https://clicknupload.one/deny5mz27zw9
