--- a/rss/index.html
+++ b/rss/index.html
@@ -1,5 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/"><channel><title>RapidMoviez</title><link>http://rmz.cr/</link><description>Download Movies/TV Shows, ...</description><language>en-US</language><copyright>Copyright 2024</copyright><lastBuildDate>Mon, 29 Sep 2025 19:00:03 GMT</lastBuildDate><generator>rfeed v1.0.0</generator><docs>https://github.com/svpino/rfeed/blob/master/README.md</docs><item><title>CITY THE ANIMATION S01E13 DUAL 1080p WEB-DL HEVC x265-RMTeam (532MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/txbetny98wto&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;CITY THE ANIMATION S01E13 DUAL 1080p WEB-DL HEVC x265-RMTeam &lt;br&gt;[RR/NF/CU]Size: 532MB RMTeam x265 mkv HEVC (MAIN) / AAC (LC) HD 1920x1080 +Subtitle &lt;br&gt;&lt;/pre&gt;&lt;img alt="City the Animation" itemprop="image" longdesc="/i/33472011" src="https://rmz.cr/data/images/movies/2025-07/city-the-animation.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Language: Japanese&lt;br&gt;Country: Japan&lt;br&gt;Cast: Mikako Komatsu, Aki Toyosaki, Yui Ishikawa&lt;br&gt;Genre: Animation | Comedy&lt;br&gt;City the Animation (2025-)&lt;br&gt;Storyline:
+<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/"><channel><title>RapidMoviez</title><link>http://rmz.cr/</link><description>Download Movies/TV Shows, ...</description><language>en-US</language><copyright>Copyright 2024</copyright><lastBuildDate>Mon, 29 Sep 2025 19:20:03 GMT</lastBuildDate><generator>rfeed v1.0.0</generator><docs>https://github.com/svpino/rfeed/blob/master/README.md</docs><item><title>Ruth &amp;amp; Boaz 2025 1080p WEBRip x265 10bit 5.1-YTS (1.6GB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/d1g0tmfhoejh
+https://clicknupload.one/e08qc4veqwx1
+https://clicknupload.one/vb4wnloqsk2s
+https://clicknupload.one/lpzec1l1knc2
+https://clicknupload.one/6093u2sufngv
+https://clicknupload.one/at2qpkcyym5i
+https://clicknupload.one/bmzfxzfwbcd1
+https://clicknupload.one/ukm2e5cnlt0e
+https://clicknupload.one/1gfn7rlbs7d0
+https://clicknupload.one/8qlx01c8s17s
+https://clicknupload.one/zoxdyarh2nx8
+https://clicknupload.one/csa6zga9n4k6
+https://clicknupload.one/ivs8rgc4710k
+https://clicknupload.one/fh66ice7ipd3
+https://clicknupload.one/5ax43gn8qbhd
+https://clicknupload.one/1kjcp8rl8qhz
+https://clicknupload.one/1qyfiw299zl1
+https://clicknupload.one/sv8hsdbd3dac
+https://clicknupload.one/isa75pf2jmyl
+https://clicknupload.one/vxwqmlsqxqei
+https://clicknupload.one/7qzyoefnjmtp
+https://clicknupload.one/qog9r6xcn2wh
+https://clicknupload.one/mtyqqi6piioi
+https://clicknupload.one/hdbaoy8ukaub
+https://clicknupload.one/4q4uafnt1dsy
+https://clicknupload.one/8rhq0he3ktfo
+https://clicknupload.one/d9yoavudlmt8
+https://clicknupload.one/lf1gtn6zdslg
+https://clicknupload.one/2k0d8ymsxasr
+https://clicknupload.one/s5d3ds7owu0p
+https://clicknupload.one/9o4uhmef9ar8
+https://clicknupload.one/a3fgzctuuowd
+https://clicknupload.one/7ofguipfpmx7
+https://clicknupload.one/sdyyy25la7kr
+https://clicknupload.one/nh3neda4hh4q
+https://clicknupload.one/88u7cwr9n4zz&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;Ruth  Boaz 2025 1080p WEBRip x265 10bit 5.1-YTS &lt;br&gt;[RR/NF/CU]Size: 1.6GB mp4 HEVC (MAIN 10) (HEV1) / AAC (LC) (MP4A) HD 1920x960 &lt;br&gt;&lt;/pre&gt;&lt;img alt="R" itemprop="image" longdesc="/i/32306048" src="https://rmz.cr/data/images/movies/2025-09/r-b.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Network: NETFLIX&lt;br&gt;Original Language: English&lt;br&gt;Country: United States&lt;br&gt;Cast: Serayah, Tyler Lepley, Phylicia Rashad&lt;br&gt;Directed By: Alanna Brown&lt;br&gt;Genre: Drama | Romance&lt;br&gt;R (2025)&lt;br&gt;Storyline:
+                            Modern-day retelling of one of the most iconic love stories in the Bible. A young woman escapes the Atlanta music scene to care for an elderly widowed woman and in the process finds the love of her life and gains the mother she ne...&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt32306048" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt32306048/" target="_blank"&gt;http://www.imdb.com/title/tt32306048/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
+File Container: MP4 &lt;br&gt; Video/Audio Codec: HEVC (MAIN 10) (HEV1) AAC (LC) (MP4A) &lt;br&gt; Video Resolution: 1920x960&lt;/pre&gt;</description><pubDate>Mon, 29 Sep 2025 22:59:39 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/ruth-boaz-2025-1080p-webrip-x265-10bit-51-yts</guid></item><item><title>CITY THE ANIMATION S01E13 DUAL 1080p WEB-DL HEVC x265-RMTeam (532MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/txbetny98wto&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;CITY THE ANIMATION S01E13 DUAL 1080p WEB-DL HEVC x265-RMTeam &lt;br&gt;[RR/NF/CU]Size: 532MB RMTeam x265 mkv HEVC (MAIN) / AAC (LC) HD 1920x1080 +Subtitle &lt;br&gt;&lt;/pre&gt;&lt;img alt="City the Animation" itemprop="image" longdesc="/i/33472011" src="https://rmz.cr/data/images/movies/2025-07/city-the-animation.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Language: Japanese&lt;br&gt;Country: Japan&lt;br&gt;Cast: Mikako Komatsu, Aki Toyosaki, Yui Ishikawa&lt;br&gt;Genre: Animation | Comedy&lt;br&gt;City the Animation (2025-)&lt;br&gt;Storyline:
                             This town, is not just a normal town. There's laughter, love and emotional moments. An unpredictable ordinary life presented by the residents. Exciting stuffs come one after another. Welcome to CITY.&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt33472011" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt33472011/" target="_blank"&gt;http://www.imdb.com/title/tt33472011/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
 File Container: MKV &lt;br&gt; Video/Audio Codec: HEVC (MAIN) AAC (LC) &lt;br&gt; Video Resolution: 1920x1080&lt;/pre&gt;</description><pubDate>Mon, 29 Sep 2025 22:33:49 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/city-the-animation-s01e13-dual-1080p-web-dl-hevc-x265-rmteam</guid></item><item><title>Under Fire 2025 1080p BluRay DD5.1 HEVC x265-RMTeam (1.5GB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/xqvubadegzx3&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;Under Fire 2025 1080p BluRay DD5.1 HEVC x265-RMTeam &lt;br&gt;[RR/NF/CU]Size: 1.5GB RMTeam x265 mkv HEVC (MAIN) / AAC (LC) HD 1920x804 +Subtitle &lt;br&gt;&lt;/pre&gt;&lt;img alt="Under Fire" itemprop="image" longdesc="/i/32212611" src="https://rmz.cr/data/images/movies/2025-09/under-fire.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Language: English&lt;br&gt;Country: United States&lt;br&gt;MPAA Rate: Not Rated&lt;br&gt;Cast: Odette Annable, Bayardo De Murguia, Mason Gooding&lt;br&gt;Directed By: Steven C. Miller&lt;br&gt;Genre: Drama | Thriller&lt;br&gt;Under Fire (2025)&lt;br&gt;Storyline:
                             At a Mexican border drug deal, dealers Griff and Abbott meet for an exchange. Both unexpectedly flash badges - Griff's FBI, Abbott's DEA - revealing they're unknowingly working the same case.&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt32212611" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt32212611/" target="_blank"&gt;http://www.imdb.com/title/tt32212611/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
