--- a/rss/index.html
+++ b/rss/index.html
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/"><channel><title>RapidMoviez</title><link>http://rmz.cr/</link><description>Download Movies/TV Shows, ...</description><language>en-US</language><copyright>Copyright 2024</copyright><lastBuildDate>Tue, 30 Sep 2025 07:00:03 GMT</lastBuildDate><generator>rfeed v1.0.0</generator><docs>https://github.com/svpino/rfeed/blob/master/README.md</docs><item><title>*smiles and kisses you* 2024 1080p WEBRip-YTS (1.5GB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/pxcpc9w16uvq
+<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/"><channel><title>RapidMoviez</title><link>http://rmz.cr/</link><description>Download Movies/TV Shows, ...</description><language>en-US</language><copyright>Copyright 2024</copyright><lastBuildDate>Tue, 30 Sep 2025 07:20:02 GMT</lastBuildDate><generator>rfeed v1.0.0</generator><docs>https://github.com/svpino/rfeed/blob/master/README.md</docs><item><title>*smiles and kisses you* 2024 1080p WEBRip-YTS (1.5GB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/pxcpc9w16uvq
 https://clicknupload.one/3s4ht39b9j8m
 https://clicknupload.one/repiqf7mk0lo
 https://clicknupload.one/dyw03jlbu3id&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;*smiles and kisses you* 2024 1080p WEBRip-YTS &lt;br&gt;[RR/NF/CU]Size: 1.5GB mp4 H264 (HIGH) (AVC1) / AAC (LC) (MP4A) HD 1920x1012 &lt;br&gt;&lt;/pre&gt;&lt;img alt="*smiles and kisses you*" itemprop="image" longdesc="/i/31987373" src="https://rmz.cr/data/images/movies/2025-09/smiles-and-kisses-you.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Language: English&lt;br&gt;Country: United States&lt;br&gt;Directed By: Bryan Carberry&lt;br&gt;Genre: Documentary&lt;br&gt;*smiles and kisses you* (2024)&lt;br&gt;Storyline:
@@ -57,32 +57,4 @@ File Container: MP4 &lt;br&gt; Video/Audio Codec: H264 (HIGH) (AVC1) AAC (LC) (M
                             Celebrities answer trivia to bank money, with correct answers building chains for bigger prizes. Wrong answers reset progress. After each round, players vote out who performed worst as host Jane Lynch dismisses them.&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt36933506" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt36933506/" target="_blank"&gt;http://www.imdb.com/title/tt36933506/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
 File Container: MKV &lt;br&gt; Video/Audio Codec: HEVC (MAIN 10) EAC3 &lt;br&gt; Video Resolution: 1280x720&lt;/pre&gt;</description><pubDate>Tue, 30 Sep 2025 08:00:10 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/celebrity-weakest-link-s01e03-720p-hevc-x265-megusta</guid></item><item><title>Secrets of Celebrity Sex Tapes S01E07 1080p WEB h264-EDITH (1.6GB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/bpcxx7de3hrz&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;Secrets of Celebrity Sex Tapes S01E07 1080p WEB h264-EDITH &lt;br&gt;[RR/NF/CU]Size: 1.6GB mkv H264 (HIGH) / AAC (HE-AAC) HD 1920x1080 &lt;br&gt;&lt;/pre&gt;&lt;img alt="Secrets of Celebrity Sex Tapes" itemprop="image" longdesc="/i/37969561" src="https://rmz.cr/data/images/movies/2025-09/secrets-of-celebrity-sex-tapes.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Network: A&lt;br&gt;Original Language: English&lt;br&gt;Country: United States&lt;br&gt;MPAA Rate: TV-14&lt;br&gt;Genre: Documentary&lt;br&gt;Secrets of Celebrity Sex Tapes (2025-)&lt;br&gt;Storyline:
                             An unfiltered deep dive into the most infamous celebrity sex tapes, revealing untold stories, cultural impact, and how scandal reshaped fame, consent, and pop culture itself.&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt37969561" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt37969561/" target="_blank"&gt;http://www.imdb.com/title/tt37969561/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
-File Container: MKV &lt;br&gt; Video/Audio Codec: H264 (HIGH) AAC (HE-AAC) &lt;br&gt; Video Resolution: 1920x1080&lt;/pre&gt;</description><pubDate>Tue, 30 Sep 2025 07:36:33 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/secrets-of-celebrity-sex-tapes-s01e07-1080p-web-h264-edith</guid></item><item><title>Caught Stealing 2025 720p WEBRip-YTS (982MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/z4lzyw7gb380
-https://clicknupload.one/dnfpp7w04osv
-https://clicknupload.one/6qwryuslnyrs
-https://clicknupload.one/2n3yttyl0cvg
-https://clicknupload.one/kmyy9351vc7o
-https://clicknupload.one/4a2hb7uty9w9
-https://clicknupload.one/k565s6qcbgyi
-https://clicknupload.one/le9cs8043n2q
-https://clicknupload.one/6el8yop3hbz6
-https://clicknupload.one/paw8swc6onv4
-https://clicknupload.one/90zwjrtozhp6
-https://clicknupload.one/e7ap0vhbit5q
-https://clicknupload.one/6994s4wkamyz
-https://clicknupload.one/lqdx2eo325ux
-https://clicknupload.one/vsnynl18tpk7
-https://clicknupload.one/wtie6ln5130x
-https://clicknupload.one/ol74qi9etsl2
-https://clicknupload.one/9t330j0zj9zs
-https://clicknupload.one/fcypvtnugc2t
-https://clicknupload.one/mlufwcddwh31
-https://clicknupload.one/2vmrsih0huoo
-https://clicknupload.one/v8ssyqlbm6p2
-https://clicknupload.one/qpa0ocrtylio
-https://clicknupload.one/0y0cio9pyzxv
-https://clicknupload.one/o24jij4zd3tu
-https://clicknupload.one/8qd9ecaawvr9
-https://clicknupload.one/wy3zsol6upff&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;Caught Stealing 2025 720p WEBRip-YTS &lt;br&gt;[RR/NF/CU]Size: 982MB mp4 H264 (HIGH) (AVC1) / AAC (LC) (MP4A) HD 1280x690 &lt;br&gt;&lt;/pre&gt;&lt;img alt="Caught Stealing" itemprop="image" longdesc="/i/1493274" src="https://rmz.cr/data/images/movies/2025-09/caught-stealing.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Language: English&lt;br&gt;Country: United States&lt;br&gt;MPAA Rate: R&lt;br&gt;Cast: Austin Butler, Regina King, Zoë Kravitz&lt;br&gt;Directed By: Darren Aronofsky&lt;br&gt;Genre: Comedy | Crime | Thriller&lt;br&gt;Caught Stealing (2025)&lt;br&gt;Storyline:
-                            Burned-out ex-baseball player Hank Thompson unexpectedly finds himself embroiled in a dangerous struggle for survival amidst the criminal underbelly of 1990s New York City, forced to navigate a treacherous underworld he never imag...&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt1493274" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt1493274/" target="_blank"&gt;http://www.imdb.com/title/tt1493274/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
-File Container: MP4 &lt;br&gt; Video/Audio Codec: H264 (HIGH) (AVC1) AAC (LC) (MP4A) &lt;br&gt; Video Resolution: 1280x690&lt;/pre&gt;</description><pubDate>Tue, 30 Sep 2025 07:29:47 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/caught-stealing-2025-720p-webrip-yts</guid></item></channel></rss>
+File Container: MKV &lt;br&gt; Video/Audio Codec: H264 (HIGH) AAC (HE-AAC) &lt;br&gt; Video Resolution: 1920x1080&lt;/pre&gt;</description><pubDate>Tue, 30 Sep 2025 07:36:33 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/secrets-of-celebrity-sex-tapes-s01e07-1080p-web-h264-edith</guid></item></channel></rss>
