--- a/rss/index.html
+++ b/rss/index.html
@@ -1,5 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/"><channel><title>RapidMoviez</title><link>http://rmz.cr/</link><description>Download Movies/TV Shows, ...</description><language>en-US</language><copyright>Copyright 2024</copyright><lastBuildDate>Tue, 30 Sep 2025 08:20:05 GMT</lastBuildDate><generator>rfeed v1.0.0</generator><docs>https://github.com/svpino/rfeed/blob/master/README.md</docs><item><title>Earthquake: Joke Telling Business 2025 720p WEBRip-YTS (416MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/j5frwopr8w6j
+<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/"><channel><title>RapidMoviez</title><link>http://rmz.cr/</link><description>Download Movies/TV Shows, ...</description><language>en-US</language><copyright>Copyright 2024</copyright><lastBuildDate>Tue, 30 Sep 2025 08:40:03 GMT</lastBuildDate><generator>rfeed v1.0.0</generator><docs>https://github.com/svpino/rfeed/blob/master/README.md</docs><item><title>Earthquake: Joke Telling Business 2025 1080p WEBRip 5.1-YTS (852MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/2nty54zivv9a
+https://clicknupload.one/ye2jeabhfv10
+https://clicknupload.one/9q5hdav6t9xo
+https://clicknupload.one/7edela4wqodo
+https://clicknupload.one/hscng6db6vwy
+https://clicknupload.one/x2pb4gynlfga
+https://clicknupload.one/f9pknnn2zpss
+https://clicknupload.one/9ptdpiu3wsmr
+https://clicknupload.one/cudfkzi1nmwv
+https://clicknupload.one/x4mzd3h7n2a6
+https://clicknupload.one/8zifpf5wsnf7
+https://clicknupload.one/kyqt8o8fxoc7
+https://clicknupload.one/g0z9upqw6zl6
+https://clicknupload.one/t08oe9v2y39s
+https://clicknupload.one/18h1rupyjysy
+https://clicknupload.one/amtpxzfzr6pb
+https://clicknupload.one/5n6ebbrnah2x
+https://clicknupload.one/riog6kwfix35
+https://clicknupload.one/5hn0ixt5a1ss
+https://clicknupload.one/pjl11q16logr
+https://clicknupload.one/ai4ypucja97p
+https://clicknupload.one/mc7wy72vel19
+https://clicknupload.one/k5w0wn2pbjk0
+https://clicknupload.one/bf5nbcf3lfjc
+https://clicknupload.one/oqf5brx7cq01
+https://clicknupload.one/t8e2qnh9i2j0
+https://clicknupload.one/2eq67susnfdw
+https://clicknupload.one/z8hfsnjn75my
+https://clicknupload.one/614sn5lfsxf4
+https://clicknupload.one/0rl9va2firyo
+https://clicknupload.one/2awq9nkt2ap9
+https://clicknupload.one/jaflnco750hx
+https://clicknupload.one/save9e9rhts5
+https://clicknupload.one/limt0jjrf3ci&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;Earthquake: Joke Telling Business 2025 1080p WEBRip 5.1-YTS &lt;br&gt;[RR/NF/CU]Size: 852MB mp4 H264 (HIGH) (AVC1) / AAC (LC) (MP4A) HD 1920x1080 &lt;br&gt;&lt;/pre&gt;&lt;img alt="Earthquake: Joke Telling Business" itemprop="image" longdesc="/i/37976380" src="https://rmz.cr/data/images/movies/2025-09/earthquake--joke-telling-business.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Language: English&lt;br&gt;Country: United States&lt;br&gt;Directed By: Stan Lathan&lt;br&gt;Genre: Comedy&lt;br&gt;Earthquake: Joke Telling Business (2025)&lt;br&gt;Storyline:
+                            Legendary comedian Earthquake's first hour-long Netflix stand-up special.&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt37976380" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt37976380/" target="_blank"&gt;http://www.imdb.com/title/tt37976380/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
+File Container: MP4 &lt;br&gt; Video/Audio Codec: H264 (HIGH) (AVC1) AAC (LC) (MP4A) &lt;br&gt; Video Resolution: 1920x1080&lt;/pre&gt;</description><pubDate>Tue, 30 Sep 2025 12:25:36 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/earthquake-joke-telling-business-2025-1080p-webrip-51-yts</guid></item><item><title>Satan, Get Thee Behind Me 2025 720p WEBRip-YTS (774MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/fo3pqviz6x77
+https://clicknupload.one/dcpdblctyi2y
+https://clicknupload.one/q7d16wi1oqz4
+https://clicknupload.one/89ba8bdktrw5&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;Satan, Get Thee Behind Me 2025 720p WEBRip-YTS &lt;br&gt;[RR/NF/CU]Size: 774MB mp4 H264 (HIGH) (AVC1) / AAC (LC) (MP4A) HD 1280x720 &lt;br&gt;&lt;/pre&gt;&lt;img alt="Satan, Get Thee Behind Me" itemprop="image" longdesc="/i/37677570" src="https://rmz.cr/data/images/movies/2025-09/satan--get-thee-behind-me.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Language: English&lt;br&gt;Country: United States&lt;br&gt;Directed By: Mike Harris&lt;br&gt;Genre: Documentary | Horror&lt;br&gt;Satan, Get Thee Behind Me (2026)&lt;br&gt;Storyline:
+                            Travis Peagler, the youngest of seven, has always known demons exist. Witnessing their cruel torment of his former Marine father and troubled older sister, Travis has fought his own fierce battles against these relentless forces. ...&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt37677570" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt37677570/" target="_blank"&gt;http://www.imdb.com/title/tt37677570/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
+File Container: MP4 &lt;br&gt; Video/Audio Codec: H264 (HIGH) (AVC1) AAC (LC) (MP4A) &lt;br&gt; Video Resolution: 1280x720&lt;/pre&gt;</description><pubDate>Tue, 30 Sep 2025 12:23:40 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/satan-get-thee-behind-me-2025-720p-webrip-yts</guid></item><item><title>Earthquake: Joke Telling Business 2025 720p WEBRip-YTS (416MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/j5frwopr8w6j
 https://clicknupload.one/hoeevcuyyz7n
 https://clicknupload.one/gerijgl62jtp
 https://clicknupload.one/0xtxust2liyr
