--- a/rss/index.html
+++ b/rss/index.html
@@ -1,5 +1,40 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/"><channel><title>RapidMoviez</title><link>http://rmz.cr/</link><description>Download Movies/TV Shows, ...</description><language>en-US</language><copyright>Copyright 2024</copyright><lastBuildDate>Fri, 03 Oct 2025 20:40:02 GMT</lastBuildDate><generator>rfeed v1.0.0</generator><docs>https://github.com/svpino/rfeed/blob/master/README.md</docs><item><title>The Family Next Door S01E04 1080p HDTV HEVC x265-RMTeam (478MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/dgwwusvua4ef&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;The Family Next Door S01E04 1080p HDTV HEVC x265-RMTeam &lt;br&gt;[RR/NF/CU]Size: 478MB RMTeam x265 mkv HEVC (MAIN) / AAC (LC) HD 1920x1080 +Subtitle &lt;br&gt;&lt;/pre&gt;&lt;img alt="The Family Next Door" itemprop="image" longdesc="/i/34712975" src="https://rmz.cr/data/images/movies/2025-08/the-family-next-door.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Language: English&lt;br&gt;Country: Australia&lt;br&gt;Cast: Philippa Northeast, Daniel Henshall, Mark Leonard Winter&lt;br&gt;Genre: Drama&lt;br&gt;The Family Next Door (2025-)&lt;br&gt;Storyline:
+<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/"><channel><title>RapidMoviez</title><link>http://rmz.cr/</link><description>Download Movies/TV Shows, ...</description><language>en-US</language><copyright>Copyright 2024</copyright><lastBuildDate>Fri, 03 Oct 2025 21:00:03 GMT</lastBuildDate><generator>rfeed v1.0.0</generator><docs>https://github.com/svpino/rfeed/blob/master/README.md</docs><item><title>Rockstar Duki desde el fin del mundo 2025 1080p WEBRip 5.1-YTS (1.9GB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/jpoefkbdpogb
+https://clicknupload.one/vo9ylwoq5prx
+https://clicknupload.one/8tj376yuy6i9
+https://clicknupload.one/2lak89dyqowg
+https://clicknupload.one/4k0n5dom1gv7
+https://clicknupload.one/gbtbeadz6uvb
+https://clicknupload.one/f8df2mcmkhrp
+https://clicknupload.one/qyi3kyznloot
+https://clicknupload.one/s2dd1l87syfn
+https://clicknupload.one/zx6edsb4icl8
+https://clicknupload.one/8zgba0ljhhrf
+https://clicknupload.one/v3dc7pps7gpy
+https://clicknupload.one/naextkfzcyn8
+https://clicknupload.one/pfmcnmgqutca
+https://clicknupload.one/qrp7kx1mru76
+https://clicknupload.one/39znojzx64jq
+https://clicknupload.one/tgysgaxfteaf
+https://clicknupload.one/uczxf1090azd
+https://clicknupload.one/id2pzltdr55f
+https://clicknupload.one/67f75a929mr8
+https://clicknupload.one/bk7iqp4shdxt
+https://clicknupload.one/stj7bfegnczw
+https://clicknupload.one/dx76xapl3l50
+https://clicknupload.one/0vtlpe6qve86
+https://clicknupload.one/ux0mtq0upyqz
+https://clicknupload.one/j0qtk1igfd7i
+https://clicknupload.one/9zzbc8j2j4hn
+https://clicknupload.one/o2m0csgo9m8t
+https://clicknupload.one/4tha96gdisjt
+https://clicknupload.one/qv5l70lafav4
+https://clicknupload.one/gv3uqbtbpwhc
+https://clicknupload.one/2k86nsg5javw
+https://clicknupload.one/a4ekc7ma1424
+https://clicknupload.one/7s7ekccafwht
+https://clicknupload.one/ifp3kcjcypah&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;Rockstar Duki desde el fin del mundo 2025 1080p WEBRip 5.1-YTS &lt;br&gt;[RR/NF/CU]Size: 1.9GB mp4 H264 (HIGH) (AVC1) / AAC (LC) (MP4A) HD 1920x1080 &lt;br&gt;&lt;/pre&gt;&lt;img alt="Rockstar Duki desde el fin del mundo" itemprop="image" longdesc="/i/38203421" src="https://rmz.cr/data/images/movies/2025-10/rockstar-duki-desde-el-fin-del-mundo.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt; movie plot: either none available or something fucked up&lt;br&gt;IMDB info&lt;/pre&gt; &lt;pre&gt;
+File Container: MP4 &lt;br&gt; Video/Audio Codec: H264 (HIGH) (AVC1) AAC (LC) (MP4A) &lt;br&gt; Video Resolution: 1920x1080&lt;/pre&gt;</description><pubDate>Sat, 04 Oct 2025 00:55:13 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/rockstar-duki-desde-el-fin-del-mundo-2025-1080p-webrip-51-yts</guid></item><item><title>The Family Next Door S01E04 1080p HDTV HEVC x265-RMTeam (478MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/dgwwusvua4ef&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;The Family Next Door S01E04 1080p HDTV HEVC x265-RMTeam &lt;br&gt;[RR/NF/CU]Size: 478MB RMTeam x265 mkv HEVC (MAIN) / AAC (LC) HD 1920x1080 +Subtitle &lt;br&gt;&lt;/pre&gt;&lt;img alt="The Family Next Door" itemprop="image" longdesc="/i/34712975" src="https://rmz.cr/data/images/movies/2025-08/the-family-next-door.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Language: English&lt;br&gt;Country: Australia&lt;br&gt;Cast: Philippa Northeast, Daniel Henshall, Mark Leonard Winter&lt;br&gt;Genre: Drama&lt;br&gt;The Family Next Door (2025-)&lt;br&gt;Storyline:
                             A stranger arrives in a Victorian coastal town, searching for answers. Her quest to solve a mystery raises suspicions among four neighbouring families.&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt34712975" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt34712975/" target="_blank"&gt;http://www.imdb.com/title/tt34712975/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
 File Container: MKV &lt;br&gt; Video/Audio Codec: HEVC (MAIN) AAC (LC) &lt;br&gt; Video Resolution: 1920x1080&lt;/pre&gt;</description><pubDate>Sat, 04 Oct 2025 00:15:31 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/the-family-next-door-s01e04-1080p-hdtv-hevc-x265-rmteam</guid></item><item><title>Wrapped Up in Christmas 2017 1080p WEBRip 5.1-YTS (1.6GB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/qubrit1zrjr0
 https://clicknupload.one/lent5hqevh4c&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;Wrapped Up in Christmas 2017 1080p WEBRip 5.1-YTS &lt;br&gt;[RR/NF/CU]Size: 1.6GB mp4 H264 (HIGH) (AVC1) / AAC (LC) (MP4A) HD 1920x1080 &lt;br&gt;&lt;/pre&gt;&lt;img alt="Wrapped Up in Christmas" itemprop="image" longdesc="/i/7605066" src="https://rmz.cr/data/images/movies/2025-10/wrapped-up-in-christmas.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Language: English&lt;br&gt;Country: United States&lt;br&gt;MPAA Rate: TV-PG&lt;br&gt;Cast: Tatyana Ali, Brendan Fehr, Kim Fields&lt;br&gt;Directed By: Peter Sullivan&lt;br&gt;Genre: Comedy | Drama | Romance&lt;br&gt;Wrapped Up in Christmas (2017)&lt;br&gt;Storyline:
