--- a/rss/index.html
+++ b/rss/index.html
@@ -1,5 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/"><channel><title>RapidMoviez</title><link>http://rmz.cr/</link><description>Download Movies/TV Shows, ...</description><language>en-US</language><copyright>Copyright 2024</copyright><lastBuildDate>Sun, 05 Oct 2025 15:00:10 GMT</lastBuildDate><generator>rfeed v1.0.0</generator><docs>https://github.com/svpino/rfeed/blob/master/README.md</docs><item><title>Confidence Queen S01E09 1080p WEB HEVC x265-RMTeam (595MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/o5rj1hf6i1kx&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;Confidence Queen S01E09 1080p WEB HEVC x265-RMTeam &lt;br&gt;[RR/NF/CU]Size: 595MB RMTeam x265 mkv HEVC (MAIN) / AAC (LC) HD 1920x1080 +Subtitle &lt;br&gt;&lt;/pre&gt;&lt;img alt="Confidence Queen" itemprop="image" longdesc="/i/37262316" src="https://rmz.cr/data/images/movies/2025-09/confidence-queen.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Network: coupang play&lt;br&gt;Original Language: Korean&lt;br&gt;Country: South Korea&lt;br&gt;Genre: Comedy | Crime&lt;br&gt;Confidence Queen (2025-)&lt;br&gt;Storyline:
+<rss version="2.0" xmlns:dc="http://purl.org/dc/elements/1.1/"><channel><title>RapidMoviez</title><link>http://rmz.cr/</link><description>Download Movies/TV Shows, ...</description><language>en-US</language><copyright>Copyright 2024</copyright><lastBuildDate>Sun, 05 Oct 2025 15:20:03 GMT</lastBuildDate><generator>rfeed v1.0.0</generator><docs>https://github.com/svpino/rfeed/blob/master/README.md</docs><item><title>The Fantastic Four: First Steps 2025 720p BluRay-YTS (1GB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/3051vuwyvgus
+https://clicknupload.one/k87hsymyjqce
+https://clicknupload.one/gfi1o6gdr2ge
+https://clicknupload.one/0ol163q6q8h6
+https://clicknupload.one/dp3sb5htc4p2
+https://clicknupload.one/wklfght8525q
+https://clicknupload.one/tij6th823y0g
+https://clicknupload.one/usonedzt700y
+https://clicknupload.one/n91huwwfr4ss
+https://clicknupload.one/9zdn3rpxohdl
+https://clicknupload.one/pekb2gq580w1
+https://clicknupload.one/becjo89iazwq
+https://clicknupload.one/ani8wccl1y7d
+https://clicknupload.one/atxyzcktju9r
+https://clicknupload.one/zylxrffgni5s
+https://clicknupload.one/wrtkchgtudtj
+https://clicknupload.one/bhvog7vizw33
+https://clicknupload.one/fwmkn3kpilz6
+https://clicknupload.one/px1f6w7eylbw
+https://clicknupload.one/awe19vk153a5
+https://clicknupload.one/ig9ru3r1h6jk
+https://clicknupload.one/cqoz6f41jial
+https://clicknupload.one/225l5eefnfnh
+https://clicknupload.one/2egbc9gdw5h2
+https://clicknupload.one/b83sz4sz2o5c
+https://clicknupload.one/zrtdgmr4b8r6
+https://clicknupload.one/ca6qag2j1ifw
+https://clicknupload.one/171z4tjfi6bt
+https://clicknupload.one/8q7o1yqd6mao
+https://clicknupload.one/snkq5dr7235o
+https://clicknupload.one/hvchpdnqiyle
+https://clicknupload.one/spsvyhwvr56w
+https://clicknupload.one/fkjq2odbo3xd
+https://clicknupload.one/bhdazrxgh1b8
+https://clicknupload.one/vq9wt1m65o5e
+https://clicknupload.one/1eyv74oagozo
+https://clicknupload.one/tv40v1tpw3uq
+https://clicknupload.one/l4jqi25zq9aq&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;The Fantastic Four: First Steps 2025 720p BluRay-YTS &lt;br&gt;[RR/NF/CU]Size: 1GB mp4 H264 (HIGH) (AVC1) / AAC (LC) (MP4A) HD 1280x536 &lt;br&gt;&lt;/pre&gt;&lt;img alt="The Fantastic Four: First Steps" itemprop="image" longdesc="/i/10676052" src="https://rmz.cr/data/images/movies/2025-07/the-fantastic-four--first-steps.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Language: English&lt;br&gt;Country: United Kingdom, United States, Canada, New Zealand&lt;br&gt;MPAA Rate: PG-13&lt;br&gt;Cast: Pedro Pascal, Vanessa Kirby, Ebon Moss-Bachrach&lt;br&gt;Directed By: Matt Shakman&lt;br&gt;Genre: Action | Adventure | Sci-Fi&lt;br&gt;The Fantastic Four: First Steps (2025)&lt;br&gt;Storyline:
+                            Forced to balance their roles as heroes with the strength of their family bond, the Fantastic Four must defend Earth from a ravenous space god called Galactus and his enigmatic herald, the Silver Surfer.&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt10676052" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt10676052/" target="_blank"&gt;http://www.imdb.com/title/tt10676052/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
+File Container: MP4 &lt;br&gt; Video/Audio Codec: H264 (HIGH) (AVC1) AAC (LC) (MP4A) &lt;br&gt; Video Resolution: 1280x536&lt;/pre&gt;</description><pubDate>Sun, 05 Oct 2025 19:04:43 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/the-fantastic-four-first-steps-2025-720p-bluray-yts</guid></item><item><title>Anita 1973 720p BluRay-YTS (872MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/d9u3bwz3kupj&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;Anita 1973 720p BluRay-YTS &lt;br&gt;[RR/NF/CU]Size: 872MB mp4 H264 (HIGH) (AVC1) / AAC (LC) (MP4A) HD 1280x772 &lt;br&gt;&lt;/pre&gt;&lt;img alt="Anita" itemprop="image" longdesc="/i/0069718" src="https://rmz.cr/data/images/movies/2025-10/anita.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Language: Swedish&lt;br&gt;Country: Sweden, France&lt;br&gt;MPAA Rate: X&lt;br&gt;Cast: Christina Lindberg, Stellan Skarsgård, Danièle Vlaminck&lt;br&gt;Directed By: Torgny Wickman&lt;br&gt;Genre: Drama&lt;br&gt;Anita (1973)&lt;br&gt;Storyline:
+                            Anita, a young woman with a troubled childhood and a hunger for love, finds a soul mate in Erik, a kindly college student.&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt0069718" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt0069718/" target="_blank"&gt;http://www.imdb.com/title/tt0069718/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
+File Container: MP4 &lt;br&gt; Video/Audio Codec: H264 (HIGH) (AVC1) AAC (LC) (MP4A) &lt;br&gt; Video Resolution: 1280x772&lt;/pre&gt;</description><pubDate>Sun, 05 Oct 2025 19:02:48 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/anita-1973-720p-bluray-yts</guid></item><item><title>Confidence Queen S01E09 1080p WEB HEVC x265-RMTeam (595MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/o5rj1hf6i1kx&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;Confidence Queen S01E09 1080p WEB HEVC x265-RMTeam &lt;br&gt;[RR/NF/CU]Size: 595MB RMTeam x265 mkv HEVC (MAIN) / AAC (LC) HD 1920x1080 +Subtitle &lt;br&gt;&lt;/pre&gt;&lt;img alt="Confidence Queen" itemprop="image" longdesc="/i/37262316" src="https://rmz.cr/data/images/movies/2025-09/confidence-queen.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Network: coupang play&lt;br&gt;Original Language: Korean&lt;br&gt;Country: South Korea&lt;br&gt;Genre: Comedy | Crime&lt;br&gt;Confidence Queen (2025-)&lt;br&gt;Storyline:
                             Confidence Queen tells the story of Yi-rang, a smart woman who becomes the ultimate con artist. She teams up with James and Gu-ho, working as a trio of swindlers, to expose scammers and take their ill-gotten gains.&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt37262316" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt37262316/" target="_blank"&gt;http://www.imdb.com/title/tt37262316/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
 File Container: MKV &lt;br&gt; Video/Audio Codec: HEVC (MAIN) AAC (LC) &lt;br&gt; Video Resolution: 1920x1080&lt;/pre&gt;</description><pubDate>Sun, 05 Oct 2025 18:59:29 GMT</pubDate><guid isPermaLink="true">https://rmz.cr/release/confidence-queen-s01e09-1080p-web-hevc-x265-rmteam</guid></item><item><title>Gachiakuta S01E13 1080p WEB HEVC x265-RMTeam (251MB)</title><description>&lt;![CDATA[&lt;h6&gt;&lt;pre&gt;https://clicknupload.one/9dpadragvda4&lt;/pre&gt;&lt;/h6&gt;&lt;pre&gt;Gachiakuta S01E13 1080p WEB HEVC x265-RMTeam &lt;br&gt;[RR/NF/CU]Size: 251MB RMTeam x265 mkv HEVC (MAIN) / AAC (LC) HD 1920x1080 +Subtitle &lt;br&gt;&lt;/pre&gt;&lt;img alt="Gachiakuta" itemprop="image" longdesc="/i/32612521" src="https://rmz.cr/data/images/movies/2025-07/gachiakuta.jpg" width="275"/&gt;&lt;br&gt; &lt;pre&gt;Original Language: Japanese&lt;br&gt;Country: Japan&lt;br&gt;Created By: Kei Urana&lt;br&gt;Genre: Animation | Action | Adventure&lt;br&gt;Gachiakuta (2025-)&lt;br&gt;Storyline:
                             In a floating city, a young boy is framed for the death of his father and exiled. He ends up in a junkyard zone, and swears to return for revenge.&lt;br&gt;&lt;img src="/files/img/icons/ class="imdbRatingPlugin" data-style="p3" data-title="tt32612521" data-user="ur24104450"/&gt;&lt;/img&gt;&lt;br&gt;&lt;li&gt;IMDB: &lt;a href="http://www.imdb.com/title/tt32612521/" target="_blank"&gt;http://www.imdb.com/title/tt32612521/&lt;/a&gt;&lt;/li&gt;&lt;br&gt;&lt;/pre&gt; &lt;pre&gt;
